# code

./: .env.example  .gitignore  Cargo.toml  README.md  package.json  turbo.json
.github/workflows/: rust-clippy.yml
.sqlx/: query-06a7b34a155e27a59f1ec79c0cebb5f7056e02f2d558459c31f9ade561fb76e4.json  query-65bff2888995094b1e27c2b8112207743cc699b7a4bc75fdbf69d96bb31eb97a.json  query-97ee67603af6fbca1da8deba88c4b2b3dae4f75b09991f389a2bd7302832f855.json  query-e4db2a0f7d3752d7c841312ad06f750698bd201b421eeef69ecb6fcd80ff9d00.json  query-e99403302f5d771b0ff77043b2f2428d1258675d208a53bdc95d954edda93c6b.json  query-f14003e3dc61cd80eb2f36fbff9ef7b3571ed80760f37739df9228c6d86f64fd.json
apps/dashboard/: .env.example  package.json  vite.config.ts
apps/dashboard/src/lib/: fetch.ts
apps/dashboard/src/lib/client/api/: auth.ts  server.ts
apps/dashboard/src/lib/client/query/: server.ts
apps/dashboard/src/lib/client/resource/: navigation.ts
apps/dashboard/src/lib/client/types/api/: index.ts
apps/dashboard/src/lib/client/types/api/server/: index.ts
apps/dashboard/src/lib/client/types/interface/: side_navigation.ts
apps/dashboard/src/lib/client/types/store/: servers.ts
apps/dashboard/src/routes/: +layout.svelte
apps/dashboard/src/routes/auth/quick_link/: +page.svelte
apps/dashboard/src/routes/server/[server_id]/: +layout.svelte  +page.svelte
apps/dashboard/src/routes/server/[server_id]/integrations/: +page.svelte
apps/dashboard/src/routes/server/[server_id]/member_links/: +page.svelte
apps/dashboard/src/routes/server/[server_id]/member_links/[member_link_id]/: +page.svelte
apps/frontend/: .env.example  package.json  svelte.config.js  vite.config.ts
apps/frontend/src/lib/interface/components/: side_navigation.svelte
apps/frontend/src/lib/interface/styles/: root.scss
apps/frontend/src/lib/server/: util.ts
apps/frontend/src/lib/server/api/: internal.ts
apps/frontend/src/lib/server/types/: index.ts
apps/frontend/src/lib/server/types/api/: index.ts
apps/frontend/src/lib/server/types/api/internal/: authorise_request.ts  index.ts
apps/frontend/src/lib/shared/types/: index.ts
apps/frontend/src/lib/shared/types/api/: response.ts
apps/frontend/src/routes/: +layout.svelte
apps/frontend/src/routes/privacy/: +page.md
apps/frontend/src/routes/roblox_request/[request_id]/: +server.ts
apps/frontend/src/routes/terms/: +page.md
crates/ribbon/: Cargo.toml  package.json
crates/ribbon/src/: error.rs  main.rs
crates/ribbon/src/discord/: command.rs  interactions.rs  mod.rs
crates/ribbon/src/discord/gateway/: mod.rs
crates/ribbon/src/discord/gateway/event/: guild.rs  interaction.rs  member.rs  misc.rs  mod.rs
crates/ribbon_cache/: Cargo.toml
crates/ribbon_cache/src/: discord.rs  error.rs  lib.rs  ribbon.rs  roblox.rs
crates/ribbon_commands/: Cargo.toml
crates/ribbon_commands/src/: error.rs  lib.rs
crates/ribbon_commands/src/commands/: mod.rs
crates/ribbon_commands/src/commands/guild/: group.rs  mod.rs
crates/ribbon_commands_core/: Cargo.toml
crates/ribbon_commands_core/src/: command.rs  error.rs  interaction.rs  lib.rs  macros.rs  util.rs
crates/ribbon_commands_core/src/context/: defer_builder.rs  mod.rs  reply_builder.rs
crates/ribbon_commands_core_macros/: Cargo.toml
crates/ribbon_commands_core_macros/src/: lib.rs  list.rs  util.rs
crates/ribbon_emojis/: Cargo.toml
crates/ribbon_emojis/src/: lib.rs
crates/ribbon_emojis_macros/: Cargo.toml
crates/ribbon_emojis_macros/src/: lib.rs
crates/ribbon_frontend/: Cargo.toml
crates/ribbon_frontend/src/: auth.rs  error.rs  lib.rs  util.rs
crates/ribbon_frontend/src/routes/: default.rs  mod.rs
crates/ribbon_frontend/src/routes/v1/: auth.rs  internal.rs  mod.rs  roblox_callback.rs  servers.rs  users.rs
crates/ribbon_frontend/src/templates/: mod.rs
crates/ribbon_frontend/src/templates/connection_callback/: finished_guild.html  mod.rs
crates/ribbon_models/: Cargo.toml
crates/ribbon_models/src/: error.rs  lib.rs
crates/ribbon_models/src/discord/: channel.rs  emoji.rs  interaction.rs  mod.rs
crates/ribbon_models/src/discord/guild/: member.rs  mod.rs
crates/ribbon_models/src/ribbon/: authorise_request.rs  mod.rs  open_cloud_authorisation.rs  website_quick_link.rs
crates/ribbon_models/src/ribbon/member_link/: connector.rs  criteria.rs  mod.rs
crates/ribbon_models/src/ribbon/server/: integration.rs  mod.rs
crates/ribbon_models/src/ribbon/user/: mod.rs  roblox_account.rs  session.rs
crates/ribbon_models/src/roblox/group/: membership.rs  mod.rs
crates/ribbon_syncing/: Cargo.toml
crates/ribbon_syncing/src/: error.rs  lib.rs
crates/ribbon_util/: Cargo.toml
crates/ribbon_util/src/: error.rs  fetch.rs  id_marker.rs  lib.rs
migrations/: 20240531173405_init.sql  20240819100627_user-auth.sql  20241021104427_open_cloud_experiment.sql
