[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["katsumi143 <32640219+katsumi143@users.noreply.github.com>"]
edition = "2024"
license = "AGPL-3.0-only"
version = "0.1.0"
homepage = "https://github.com/hakusoda/ribbon"
repository = "https://github.com/hakusoda/ribbon"
rust-version = "1.79"

[workspace.dependencies]
actix-web = "4.9.0"
async-once-cell = "0.5.4"
base64 = "0.22.1"
chrono = "0.4.38"
dashmap = { version = "6.1.0", features = ["inline"] }
futures = "0.3.31"
jsonwebtoken = "9.3.0"
log = "0.4.22"
once_cell = "1.20.2"
p384 = "0.13.0"
rand = "0.9.0"
reqwest = "0.12.9"
rustls = { version = "0.23.19", features = ["aws_lc_rs"] }
serde = { version = "1.0.215", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.133"
serde_repr = "0.1.19"
sqlx = { version = "0.8.2", features = ["uuid", "json", "chrono", "macros", "postgres", "tls-native-tls", "rust_decimal", "runtime-tokio"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
twilight-http = { git = "https://github.com/twilight-rs/twilight.git", rev = "beedad3", features = ["simd-json"] }
twilight-gateway = { git = "https://github.com/twilight-rs/twilight.git", rev = "beedad3", features = ["simd-json"] }
twilight-model = { git = "https://github.com/twilight-rs/twilight.git", rev = "beedad3" }
twilight-util = { git = "https://github.com/twilight-rs/twilight.git", rev = "beedad3", features = ["builder"] }
urlencoding = "2.1.3"
uuid = "1.11.0"
validator = "0.20.0"

[profile.dev]
lto = false
debug = true
rpath = false
panic = "unwind"
opt-level = 0
incremental = true
codegen-units = 256
overflow-checks = true
debug-assertions = true

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = 3
incremental = false
codegen-units = 1
debug-assertions = false