cargo-features = ["edition2024"]

[package]
name = "ribbon"
description = "ribbonous!"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-once-cell.workspace = true
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive"] }
dotenvy.workspace = true
env_logger = "0.11.3"
log.workspace = true
once_cell.workspace = true
reqwest = "0.12.5"
ribbon_cache.path = "../ribbon_cache"
ribbon_commands.path = "../ribbon_commands"
ribbon_commands_core.path = "../ribbon_commands_core"
ribbon_emojis.path = "../ribbon_emojis"
ribbon_frontend.path = "../ribbon_frontend"
ribbon_models.path = "../ribbon_models"
ribbon_syncing.path = "../ribbon_syncing"
ribbon_util.path = "../ribbon_util"
rustls.workspace = true
serde.workspace = true
serde_json = "1.0.120"
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true
twilight-util.workspace = true
twilight-gateway.workspace = true