cargo-features = ["edition2024"]

[package]
name = "ribbon_cache"
description = "anonymous mail prototype"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dashmap.workspace = true
futures.workspace = true
rand.workspace = true
ribbon_models.path = "../ribbon_models"
ribbon_util.path = "../ribbon_util"
once_cell.workspace = true
sqlx.workspace = true
thiserror.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true