cargo-features = ["edition2024"]

[package]
name = "ribbon_emojis"
description = "anonymous mail prototype"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
log.workspace = true
once_cell.workspace = true
ribbon_cache.path = "../ribbon_cache"
ribbon_emojis_macros.path = "../ribbon_emojis_macros"
ribbon_util.path = "../ribbon_util"
serde.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true