cargo-features = ["edition2024"]

[package]
name = "ribbon_util"
description = "anonymous mail prototype"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-once-cell.workspace = true
http = "1.1.0"
once_cell.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true
urlencoding.workspace = true